docs-archive/apache-airflow-providers-google/16.1.0/_sources/_api/airflow/providers/google/cloud/transfers/salesforce_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.salesforce_to_gcs
==========================================================

.. py:module:: airflow.providers.google.cloud.transfers.salesforce_to_gcs


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.salesforce_to_gcs.SalesforceToGcsOperator


Module Contents
---------------

.. py:class:: SalesforceToGcsOperator(*, query, bucket_name, object_name, salesforce_conn_id, include_deleted = False, query_params = None, export_format = 'csv', coerce_to_timestamp = False, record_time_added = False, gzip = False, gcp_conn_id = 'google_cloud_default', **kwargs)

   Bases: :py:obj:`airflow.providers.google.version_compat.BaseOperator`


   Submits Salesforce query and uploads results to Google Cloud Storage.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SalesforceToGcsOperator`

   :param query: The query to make to Salesforce.
   :param bucket_name: The bucket to upload to.
   :param object_name: The object name to set when uploading the file.
   :param salesforce_conn_id: the name of the connection that has the parameters
       we need to connect to Salesforce.
   :param include_deleted: True if the query should include deleted records.
   :param query_params: Additional optional arguments
   :param export_format: Desired format of files to be exported.
   :param coerce_to_timestamp: True if you want all datetime fields to be converted into Unix timestamps.
       False if you want them to be left in the same format as they were in Salesforce.
       Leaving the value as False will result in datetimes being strings. Default: False
   :param record_time_added: True if you want to add a Unix timestamp field
       to the resulting data that marks when the data was fetched from Salesforce. Default: False
   :param gzip: Option to compress local file or file data for upload
   :param gcp_conn_id: the name of the connection that has the parameters we need to connect to GCS.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('query', 'bucket_name', 'object_name')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: query


   .. py:attribute:: bucket_name


   .. py:attribute:: object_name


   .. py:attribute:: salesforce_conn_id


   .. py:attribute:: export_format
      :value: 'csv'



   .. py:attribute:: coerce_to_timestamp
      :value: False



   .. py:attribute:: record_time_added
      :value: False



   .. py:attribute:: gzip
      :value: False



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: include_deleted
      :value: False



   .. py:attribute:: query_params
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



